...
    <string name="title_match_detail">Match Detail</string>
    <string name="menu_prev_match">Prev. Match</string>
    <string name="menu_next_match">Next Match</string>
    <string name="label_empty_fav_match">You don\'t have favorite matches</string>
    <string name="label_empty_fav_team">You don\'t have favorite team</string>
    <string name="menu_favorites">Favorites</string>
    <string name="message_added_to_favorite">Added to favorite</string>
    <string name="message_remove_to_favorite">Removed from favorite</string>
    <string name="message_error_favorite">Something error, process failed</string>
    <string name="menu_matches">Matches</string>
    <string name="menu_teams">Teams</string>
    <string name="title_search">Search</string>
    <string name="label_matchday">Matchday</string>

    <string-array name="league">
        <item>English Premier League</item>
        <item>German Bundesliga</item>
...
