<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl_teams"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.teamlist.TeamListFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/pb_team_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/ev_error_team_list_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_error"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/error_load_data"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_retry_load_league"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_rounded_green"
                android:text="@string/btn_retry"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_team_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <Spinner
                android:id="@+id/spn_league"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_teams"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ev_error_team_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/ic_error"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/error_load_data"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_retry"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/btn_rounded_green"
                    android:text="@string/btn_retry"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_empty_league"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/error_data_not_available"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</android.support.v4.widget.SwipeRefreshLayout>